# sheepsquatch-desktop

./: AUTHORS  CHANGELOG  HACKING  Makefile  Makefile.am  Makefile.in  README.GIT  README.md  aclocal.m4  build.sh  compton.conf  config.status  configure  configure.ac  libtool  makedeb  round.patch  sheeplogout.desktop  sheepsquatch.tint2rc  sheepsquatchJGRC  wall  wall2
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
data/: environment  menu.xml  menu.xsd  rc.xml  rc.xsd  sheep.desktop
data/autostart/: autostart  autostart.in  sheep-autostart  sheep-autostart.in  sheep-xdg-autostart
data/gnome-session/: sheep-gnome-fallback.session  sheep-gnome.session
data/gnome-wm-properties/: sheep.desktop
data/xsession/: sheep-session  sheep-session.in  sheep.desktop  sheep.desktop.in
debian/: changelog.in  conffiles  control  copyright  menu  postinst  postrm  rules
doc/: obxprop.1.in  obxprop.1.sgml  rc-mouse-focus.xml  sheep-gnome-session.1  sheep-gnome-session.1.sgml  sheep-kde-session.1  sheep-kde-session.1.sgml  sheep-session.1  sheep-session.1.sgml  sheep.1.sgml
m4/: Makefile  Makefile.am  Makefile.in
obrender/: libobrender.la  libobrender_la-button.lo  libobrender_la-color.lo  libobrender_la-font.lo  libobrender_la-gradient.lo  libobrender_la-image.lo  libobrender_la-imagecache.lo  libobrender_la-instance.lo  libobrender_la-mask.lo  libobrender_la-render.lo  libobrender_la-theme.lo  obrender-3.5.pc  obrender-3.5.pc.in  theme.c
obrender/.deps/: libobrender_la-button.Plo  libobrender_la-color.Plo  libobrender_la-font.Plo  libobrender_la-gradient.Plo  libobrender_la-image.Plo  libobrender_la-imagecache.Plo  libobrender_la-instance.Plo  libobrender_la-mask.Plo  libobrender_la-render.Plo  libobrender_la-theme.Plo
obrender/.libs/: libobrender.lai  libobrender.so.29.0.2  libobrender.so.29.0.2T
obt/: libobt.la  libobt_la-ddparse.lo  libobt_la-display.lo  libobt_la-keyboard.lo  libobt_la-link.lo  libobt_la-paths.lo  libobt_la-prop.lo  libobt_la-signal.lo  libobt_la-xml.lo  libobt_la-xqueue.lo  obt-3.5.pc  obt-3.5.pc.in  obt_unittests
obt/.deps/: libobt_la-ddparse.Plo  libobt_la-display.Plo  libobt_la-keyboard.Plo  libobt_la-link.Plo  libobt_la-paths.Plo  libobt_la-prop.Plo  libobt_la-signal.Plo  libobt_la-xml.Plo  libobt_la-xqueue.Plo  obt_unittests-bsearch_unittest.Po  obt_unittests-unittest_base.Po
obt/.libs/: libobt.lai  libobt.so.2.0.2  obt_unittests
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  af.gmo  af.po  ar.gmo  ar.po  be.gmo  be.po  bn_IN.gmo  bn_IN.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  gl_ES.gmo  gl_ES.po  he.gmo  he.po  hr.gmo  (+47 more)
release/: bugs  common  email  go
sheep/: actions.c  client.c  client_list_combined_menu.c  client_list_menu.c  client_menu.c  config.c  config.c.orig  config.c.rej  config.h  debug.c  dock.c  event.c  focus.c  focus_cycle.c  focus_cycle_indicator.c  focus_cycle_popup.c  frame.c  framerender.c.orig  grab.c  keyboard.c  menu.c  menuframe.c  mouse.c  moveresize.c  ping.c  place.h  popup.c  prompt.c  screen.c  session.c  sheep  sheep.c  sheep.h  stacking.c  stacking.h  startupnotify.c  translate.c  window.c  window.h
sheep/.deps/: sheep-actions.Po  sheep-client.Po  sheep-client_list_combined_menu.Po  sheep-client_list_menu.Po  sheep-client_menu.Po  sheep-config.Po  sheep-debug.Po  sheep-dock.Po  sheep-event.Po  sheep-focus.Po  sheep-focus_cycle.Po  sheep-focus_cycle_indicator.Po  sheep-focus_cycle_popup.Po  sheep-frame.Po  sheep-framerender.Po  sheep-grab.Po  sheep-group.Po  sheep-keyboard.Po  sheep-keytree.Po  sheep-menu.Po  sheep-menuframe.Po  sheep-mouse.Po  sheep-moveresize.Po  sheep-ping.Po  sheep-place.Po  sheep-place_overlap.Po  sheep-popup.Po  sheep-prompt.Po  sheep-resist.Po  sheep-screen.Po  sheep-session.Po  sheep-sheep.Po  sheep-stacking.Po  sheep-startupnotify.Po  sheep-translate.Po  sheep-window.Po
sheep/.libs/: sheep
sheep/actions/: addremovedesktop.c  breakchroot.c  close.c  cyclewindows.c  debug.c  decorations.c  desktop.c  directionalwindows.c  dock.c  dockautohide.c  execute.c  exit.c  focus.c  focustobottom.c  fullscreen.c  growtoedge.c  iconify.c  if.c  kill.c  layer.c  lower.c  maximize.c  move.c  moverelative.c  moveresizeto.c  movetoedge.c  omnipresent.c  raise.c  raiselower.c  reconfigure.c  resize.c  resizerelative.c  restart.c  shade.c  shadelowerraise.c  showdesktop.c  showmenu.c  unfocus.c
sheep/actions/.deps/: sheep-addremovedesktop.Po  sheep-all.Po  sheep-breakchroot.Po  sheep-close.Po  sheep-cyclewindows.Po  sheep-debug.Po  sheep-decorations.Po  sheep-desktop.Po  sheep-directionalwindows.Po  sheep-dock.Po  sheep-dockautohide.Po  sheep-execute.Po  sheep-exit.Po  sheep-focus.Po  sheep-focustobottom.Po  sheep-fullscreen.Po  sheep-growtoedge.Po  sheep-iconify.Po  sheep-if.Po  sheep-kill.Po  sheep-layer.Po  sheep-lower.Po  sheep-maximize.Po  sheep-move.Po  sheep-moverelative.Po  sheep-moveresizeto.Po  sheep-movetoedge.Po  sheep-omnipresent.Po  sheep-raise.Po  sheep-raiselower.Po  sheep-reconfigure.Po  sheep-resize.Po  sheep-resizerelative.Po  sheep-restart.Po  sheep-shade.Po  sheep-shadelowerraise.Po  sheep-showdesktop.Po  sheep-showmenu.Po  sheep-unfocus.Po
themes/Adapta-Nokto-Maia/cinnamon/: cinnamon.css
themes/Adapta-Nokto-Maia/gnome-shell/: gdm3-Adapta-Nokto.css  gnome-shell-theme.gresource  gnome-shell.css
themes/Adapta-Nokto-Maia/gtk-3.0/: gtk.gresource
themes/Adapta-Nokto-Maia/gtk-3.24/: gtk.gresource
themes/Arc-Dark-OSX/gtk-3.22/: gtk.gresource
themes/Arc-Dark-OSX/sheep-3/: themerc.save
tools/gdm-control/: gdm-control
tools/gdm-control/.deps/: gdm_control-gdm-control.Po
tools/gnome-panel-control/: gnome-panel-control
tools/gnome-panel-control/.deps/: gnome_panel_control-gnome-panel-control.Po
tools/obxprop/: obxprop
tools/obxprop/.deps/: obxprop-obxprop.Po
wallpapers/: wall3
